// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PropertyPage Snapshots should match snapshot for authenticated non-owner view: authenticated-non-owner-view 1`] = `
<main>
  <div
    class="flex flex-col md:flex-row md:justify-between md:items-center"
  >
    <nav
      data-testid="breadcrumbs"
    >
      <span
        data-href="/properties"
      >
        Properties
      </span>
      <span
        data-active="true"
        data-href="/properties/test-property-id"
      >
        Apartment in Downtown
      </span>
    </nav>
    <div
      class="mb-6"
    >
      <div
        class="flex justify-start items-center text-sm"
      >
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="share-buttons"
        >
          ShareButtons Component
        </div>
        <div
          class="flex justify-between items-center ml-4"
        >
          <div>
            <button
              data-property-id="507f1f77bcf86cd799439011"
              data-testid="property-favorite-button"
            >
              Favorite
            </button>
          </div>
          <p
            class="ml-1"
          >
            Favorite
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-image-count="3"
    data-testid="property-images"
  >
    PropertyImages Component
  </div>
  <section
    class="mt-4"
  >
    <div>
      <div
        class="grid grid-cols-1 w-full gap-[20px] md:grid-cols-70/30"
      >
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="property-details"
        >
          PropertyDetails Component
        </div>
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="property-page-aside"
        >
          PropertyPageAside Component
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`PropertyPage Snapshots should match snapshot for property owner view: property-owner-view 1`] = `
<main>
  <div
    class="flex flex-col md:flex-row md:justify-between md:items-center"
  >
    <nav
      data-testid="breadcrumbs"
    >
      <span
        data-href="/properties"
      >
        Properties
      </span>
      <span
        data-active="true"
        data-href="/properties/test-property-id"
      >
        Apartment in Downtown
      </span>
    </nav>
    <div
      class="mb-6"
    >
      <div
        class="flex justify-start items-center text-sm"
      >
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="share-buttons"
        >
          ShareButtons Component
        </div>
      </div>
    </div>
  </div>
  <div
    data-image-count="3"
    data-testid="property-images"
  >
    PropertyImages Component
  </div>
  <section
    class="mt-4"
  >
    <div>
      <div
        class="grid grid-cols-1 w-full gap-[20px]"
      >
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="property-details"
        >
          PropertyDetails Component
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`PropertyPage Snapshots should match snapshot for unauthenticated user view: unauthenticated-user-view 1`] = `
<main>
  <div
    class="flex flex-col md:flex-row md:justify-between md:items-center"
  >
    <nav
      data-testid="breadcrumbs"
    >
      <span
        data-href="/properties"
      >
        Properties
      </span>
      <span
        data-active="true"
        data-href="/properties/test-property-id"
      >
        Apartment in Downtown
      </span>
    </nav>
    <div
      class="mb-6"
    >
      <div
        class="flex justify-start items-center text-sm"
      >
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="share-buttons"
        >
          ShareButtons Component
        </div>
      </div>
    </div>
  </div>
  <div
    data-image-count="3"
    data-testid="property-images"
  >
    PropertyImages Component
  </div>
  <section
    class="mt-4"
  >
    <div>
      <div
        class="grid grid-cols-1 w-full gap-[20px]"
      >
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="property-details"
        >
          PropertyDetails Component
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`PropertyPage Snapshots should match snapshot with all components present: full-page-with-all-components 1`] = `
<main>
  <div
    class="flex flex-col md:flex-row md:justify-between md:items-center"
  >
    <nav
      data-testid="breadcrumbs"
    >
      <span
        data-href="/properties"
      >
        Properties
      </span>
      <span
        data-active="true"
        data-href="/properties/test-property-id"
      >
        Apartment in Downtown
      </span>
    </nav>
    <div
      class="mb-6"
    >
      <div
        class="flex justify-start items-center text-sm"
      >
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="share-buttons"
        >
          ShareButtons Component
        </div>
        <div
          class="flex justify-between items-center ml-4"
        >
          <div>
            <button
              data-property-id="507f1f77bcf86cd799439011"
              data-testid="property-favorite-button"
            >
              Favorite
            </button>
          </div>
          <p
            class="ml-1"
          >
            Favorite
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-image-count="3"
    data-testid="property-images"
  >
    PropertyImages Component
  </div>
  <section
    class="mt-4"
  >
    <div>
      <div
        class="grid grid-cols-1 w-full gap-[20px] md:grid-cols-70/30"
      >
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="property-details"
        >
          PropertyDetails Component
        </div>
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="property-page-aside"
        >
          PropertyPageAside Component
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`PropertyPage Snapshots should match snapshot with different property types: apartment-property-view 1`] = `
<main>
  <div
    class="flex flex-col md:flex-row md:justify-between md:items-center"
  >
    <nav
      data-testid="breadcrumbs"
    >
      <span
        data-href="/properties"
      >
        Properties
      </span>
      <span
        data-active="true"
        data-href="/properties/test-property-id"
      >
        Apartment in Seattle
      </span>
    </nav>
    <div
      class="mb-6"
    >
      <div
        class="flex justify-start items-center text-sm"
      >
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="share-buttons"
        >
          ShareButtons Component
        </div>
        <div
          class="flex justify-between items-center ml-4"
        >
          <div>
            <button
              data-property-id="507f1f77bcf86cd799439011"
              data-testid="property-favorite-button"
            >
              Favorite
            </button>
          </div>
          <p
            class="ml-1"
          >
            Favorite
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-image-count="3"
    data-testid="property-images"
  >
    PropertyImages Component
  </div>
  <section
    class="mt-4"
  >
    <div>
      <div
        class="grid grid-cols-1 w-full gap-[20px] md:grid-cols-70/30"
      >
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="property-details"
        >
          PropertyDetails Component
        </div>
        <div
          data-property-id="507f1f77bcf86cd799439011"
          data-testid="property-page-aside"
        >
          PropertyPageAside Component
        </div>
      </div>
    </div>
  </section>
</main>
`;
